base/src/test/resources/failure/patterns/issues/issue681.aya.txt
In file $FILE:26:4 ->

  24 | 
  25 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  26 |   | zero, y, z => idp
           ^--^

Error: There is no parameter for the pattern
         zero
       to match against, given the return type
         Pi (x y z : Nat) -> (=) {Nat} (x + (y + z)) ((x + y) + z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

In file $FILE:27:4 ->

  25 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  26 |   | zero, y, z => idp
  27 |   | suc x, y, z => pmap suc (+-assoc x y z)
           ^---^

Error: There is no parameter for the pattern
         suc x
       to match against, given the return type
         Pi (x y z : Nat) -> (=) {Nat} (x + (y + z)) ((x + y) + z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

2 error(s), 0 warning(s).
What are you doing?
